kube/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-k8s-api-demo
  namespace: k8s-api-demo
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: quarkus-k8s-api-demo
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-k8s-api-demo
  namespace: k8s-api-demo
spec:
  to:
    kind: Service
    name: quarkus-k8s-api-demo
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
